--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/system_information.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/system_information.html.twig
@@ -32,82 +32,82 @@
       <h3 class="card-header">
         <i class="material-icons">info_outline</i> {{ 'Configuration information'|trans }}
       </h3>
-      <div class="card-body">
+      <div class="card-block">
         <div class="card-text">
           <p>{{ 'This information must be provided when you report an issue on GitHub or on the forum.'|trans }}</p>
         </div>
       </div>
     </div>
-
-    <div class="card">
-      <h3 class="card-header">
-        <i class="material-icons">info_outline</i> {{ 'Server information'|trans }}
-      </h3>
-      <div class="card-body">
-        <div class="card-text">
-          {% if system.uname is not empty %}
+    {% if system.notHostMode %}
+      <div class="card">
+        <h3 class="card-header">
+          <i class="material-icons">info_outline</i> {{ 'Server information'|trans }}
+        </h3>
+        <div class="card-block">
+          <div class="card-text">
+            {% if system.uname is not empty %}
+              <p>
+                <strong>{{ 'Server information:'|trans }}</strong> {{ system.uname }}
+              </p>
+            {% endif %}
             <p>
-              <strong>{{ 'Server information:'|trans }}</strong> {{ system.uname }}
+              <strong>{{ 'Server software version:'|trans }}</strong> {{ system.server.version }}
             </p>
-          {% endif %}
-          <p>
-            <strong>{{ 'Server software version:'|trans }}</strong> {{ system.server.version }}
-          </p>
-          <p>
-            <strong>{{ 'PHP version:'|trans }}</strong> {{ system.server.php.version }}
-          </p>
-          <p>
-            <strong>{{ 'Memory limit:'|trans }}</strong> {{ system.server.php.memoryLimit }}
-          </p>
-          <p>
-            <strong>{{ 'Max execution time:'|trans }}</strong> {{ system.server.php.maxExecutionTime }}
-          </p>
-          <p>
-            <strong>{{ 'Upload Max File size:'|trans }}</strong> {{ system.server.php.maxFileSizeUpload }}
-          </p>
-          {% if system.instaWebInstalled %}
-            <p>{{ 'PageSpeed module for Apache installed (mod_instaweb)'|trans }}</p>
-          {% endif %}
+            <p>
+              <strong>{{ 'PHP version:'|trans }}</strong> {{ system.server.php.version }}
+            </p>
+            <p>
+              <strong>{{ 'Memory limit:'|trans }}</strong> {{ system.server.php.memoryLimit }}
+            </p>
+            <p>
+              <strong>{{ 'Max execution time:'|trans }}</strong> {{ system.server.php.maxExecutionTime }}
+            </p>
+            <p>
+              <strong>{{ 'Upload Max File size:'|trans }}</strong> {{ system.server.php.maxFileSizeUpload }}
+            </p>
+            {% if system.instaWebInstalled %}
+              <p>{{ 'PageSpeed module for Apache installed (mod_instaweb)'|trans }}</p>
+            {% endif %}
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="card">
-      <h3 class="card-header">
-        <i class="material-icons">info_outline</i> {{ 'Database information'|trans({}, 'Admin.Advparameters.Feature') }}
-      </h3>
-      <div class="card-body">
-        <div class="card-text">
-          <p>
-            <strong>{{ 'MySQL version:'|trans }}</strong> {{ system.database.version }}
-          </p>
-          <p>
-            <strong>{{ 'MySQL server:'|trans }}</strong> {{ system.database.server }}
-          </p>
-          <p>
-            <strong>{{ 'MySQL name:'|trans }}</strong> {{ system.database.name }}
-          </p>
-          <p>
-            <strong>{{ 'MySQL user:'|trans }}</strong> {{ system.database.user }}
-          </p>
-          <p>
-            <strong>{{ 'Tables prefix:'|trans }}</strong> {{ system.database.prefix }}
-          </p>
-          <p>
-            <strong>{{ 'MySQL engine:'|trans }}</strong> {{ system.database.engine }}
-          </p>
-          <p>
-            <strong>{{ 'MySQL driver:'|trans }}</strong> {{ system.database.driver }}
-          </p>
+      <div class="card">
+        <h3 class="card-header">
+          <i class="material-icons">info_outline</i> {{ 'Database information'|trans({}, 'Admin.Advparameters.Feature') }}
+        </h3>
+        <div class="card-block">
+          <div class="card-text">
+            <p>
+              <strong>{{ 'MySQL version:'|trans }}</strong> {{ system.database.version }}
+            </p>
+            <p>
+              <strong>{{ 'MySQL server:'|trans }}</strong> {{ system.database.server }}
+            </p>
+            <p>
+              <strong>{{ 'MySQL name:'|trans }}</strong> {{ system.database.name }}
+            </p>
+            <p>
+              <strong>{{ 'MySQL user:'|trans }}</strong> {{ system.database.user }}
+            </p>
+            <p>
+              <strong>{{ 'Tables prefix:'|trans }}</strong> {{ system.database.prefix }}
+            </p>
+            <p>
+              <strong>{{ 'MySQL engine:'|trans }}</strong> {{ system.database.engine }}
+            </p>
+            <p>
+              <strong>{{ 'MySQL driver:'|trans }}</strong> {{ system.database.driver }}
+            </p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="card">
+      <div class="card">
       <h3 class="card-header">
         <i class="material-icons">info_outline</i> {{ 'List of overrides'|trans({}, 'Admin.Advparameters.Feature') }}
       </h3>
-      <div class="card-body">
+      <div class="card-block">
         <div class="card-text">
           <ul>
             {% for override in system.overrides %}
@@ -117,13 +117,14 @@
         </div>
       </div>
     </div>
+    {% endif %}
   </div>
   <div class="col-lg-6">
     <div class="card">
       <h3 class="card-header">
         <i class="material-icons">info_outline</i> {{ 'Store information'|trans }}
       </h3>
-      <div class="card-body">
+      <div class="card-block">
         <div class="card-text">
           <p>
             <strong>{{ 'PrestaShop version:'|trans }}</strong> {{ system.shop.version }}
@@ -145,7 +146,7 @@
       <h3 class="card-header">
         <i class="material-icons">info_outline</i> {{ 'Mail configuration'|trans }}
       </h3>
-      <div class="card-body">
+      <div class="card-block">
         <div class="card-text">
           {% if system.isNativePHPmail %}
             <p>
@@ -189,7 +190,7 @@
       <h3 class="card-header">
         <i class="material-icons">info_outline</i> {{ 'Your information'|trans }}
       </h3>
-      <div class="card-body">
+      <div class="card-block">
         <div class="card-text">
           <p>
             <strong>{{ 'Your web browser:'|trans }}</strong> {{ userAgent }}
@@ -202,7 +203,7 @@
       <h3 class="card-header">
         <i class="material-icons">info_outline</i> {{ 'Check your configuration'|trans }}
       </h3>
-      <div class="card-body">
+      <div class="card-block">
         <div class="card-text">
           {% if requirements.failRequired == false %}
             <p>
@@ -247,59 +248,119 @@
     </div>
   </div>
 </div>
-
-<div class="card">
-  <h3 class="card-header">
-    <i class="material-icons">info_outline</i> {{ 'List of changed files'|trans }}
-  </h3>
-  <div class="card-body">
-    <div class="card-text" id="changedFiles">
-      <i class="material-icons">loop</i> {{ 'Checking files...'|trans({}, 'Admin.Advparameters.Notification') }}
+{% if system.notHostMode %}
+  <div class="card">
+    <h3 class="card-header">
+      <i class="material-icons">info_outline</i> {{ 'List of changed files'|trans }}
+    </h3>
+    <div class="card-block">
+      <div class="card-text" id="changedFiles">
+        <i class="material-icons">loop</i> {{ 'Checking files...'|trans({}, 'Admin.Advparameters.Notification') }}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
+{% if system.notHostMode %}
+  <script>
+    $(document).ready(function()
+    {
+      var translations = {
+        missing: '{{ 'Missing files'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
+        updated: '{{ 'Updated files'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
+        changesDetected: '{{ 'Changed/missing files have been detected.'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
+        noChangeDetected: '{{ 'No change has been detected in your files.'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}'
+      };
 
-<script>
-  $(document).ready(function()
-  {
-    var translations = {
-      missing: '{{ 'Missing files'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
-      updated: '{{ 'Updated files'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
-      changesDetected: '{{ 'Changed/missing files have been detected.'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
-      noChangeDetected: '{{ 'No change has been detected in your files.'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}'
-    };
+      $.ajax({
+        type: 'POST',
+        url: '{{ path("admin_system_information_check_files") }}',
+        data: {},
+        dataType: 'json',
+        success: function(json)
+        {
+          var tab = {
+            'missing': translations.missing,
+            'updated': translations.updated,
+          };
 
-    $.ajax({
-      type: 'POST',
-      url: '{{ path("admin_system_information_check_files") }}',
-      data: {},
-      dataType: 'json',
-      success: function(json)
-      {
-        var tab = {
-          'missing': translations.missing,
-          'updated': translations.updated,
-        };
-
-        if (json.missing.length || json.updated.length) {
-          $('#changedFiles').html('<div class="alert alert-warning" role="alert"><p class="alert-text">' + translations.changesDetected + '</p></div>');
-        } else {
-          $('#changedFiles').html('<div class="alert alert-success" role="alert"><p class="alert-text">' + translations.noChangeDetected + '</p></div>');
-        }
-
-        $.each(tab, function(key, lang) {
-          if (json[key].length) {
-            var html = $('<ul>').attr('id', key+'_files');
-            $(json[key]).each(function(key, file) {
-              html.append($('<li>').html(file))
-            });
-            $('#changedFiles')
-              .append($('<h4>').html(lang+' ('+json[key].length+')'))
-              .append(html);
+          if (json.missing.length || json.updated.length) {
+            $('#changedFiles').html('<div class="alert alert-warning" role="alert"><p class="alert-text">' + translations.changesDetected + '</p></div>');
+          } else {
+            $('#changedFiles').html('<div class="alert alert-success" role="alert"><p class="alert-text">' + translations.noChangeDetected + '</p></div>');
           }
-        });
-      }
+
+          $.each(tab, function(key, lang) {
+            if (json[key].length) {
+              var html = $('<ul>').attr('id', key+'_files');
+              $(json[key]).each(function(key, file) {
+                html.append($('<li>').html(file))
+              });
+              $('#changedFiles')
+                .append($('<h4>').html(lang+' ('+json[key].length+')'))
+                .append(html);
+            }
+          });
+        }
+      });
     });
-  });
-</script>
+  </script>
+{% endif %}
+
+{% if system.notHostMode %}
+  <div class="card">
+    <h3 class="card-header">
+      <i class="material-icons">info_outline</i> {{ 'List of Db changes'|trans }}
+    </h3>
+    <div class="card-block">
+      <div class="card-text" id="changesOnDb">
+        <i class="material-icons">loop</i> {{ 'Checking db...'|trans({}, 'Admin.Advparameters.Notification') }}
+      </div>
+    </div>
+  </div>
+{% endif %}
+{% if system.notHostMode %}
+  <script>
+    $(document).ready(function()
+    {
+      let translations = {
+        missingtable: '{{ 'Missing tables'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
+        missingcolumn: '{{ 'Missing columns'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
+        changesDetected: '{{ 'Changes on Database have been detected.'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}',
+        noChangeDetected: '{{ 'No change has been detected in your files.'|trans({}, 'Admin.Advparameters.Notification')|e('js') }}'
+      };
+
+      $.ajax({
+        type: 'POST',
+        url: '{{ path("admin_system_information_check_db") }}',
+        data: {},
+        dataType: 'json',
+        success: function(json)
+        {
+          let tab = {
+            'missing': translations.missingtable,
+            'updated': translations.missingcolumn,
+          };
+
+          if (json.missing.length || json.updated.length) {
+            $('#changesOnDb').html('<div class="alert alert-warning" role="alert"><p class="alert-text">' + translations.changesDetected + '</p></div>');
+          } else {
+            $('#changesOnDb').html('<div class="alert alert-success" role="alert"><p class="alert-text">' + translations.noChangeDetected + '</p></div>');
+          }
+
+          $.each(tab, function(key, lang) {
+            if (json[key].length) {
+              var html = $('<ul>').attr('id', key+'_files');
+              $(json[key]).each(function(key, file) {
+                html.append($('<li>').html(file))
+              });
+              $('#changesOnDb')
+                .append($('<h4>').html(lang+' ('+json[key].length+')'))
+                .append(html);
+            }
+          });
+        }
+      });
+    });
+  </script>
+{% endif %}
 {% endblock %}
